--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --build-optimizer=false",
+    "build-gh": "ng build --prod --base-href /covid-view/ --build-optimizer false --output-path ./dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
